2007-10-09  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinymail.el (tinymail-buffer-email-address-scramble-area):
	Improve regexps to find diff start better.

2007-09-27  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-close):
	Corrected 'package' and 'version' information.

2007-09-25  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-find-autoload-functions):
	fix docstring typo.

	* tiny/tinylib.el (ti::package-autoload-create-on-file):
	Minor adjustment: if there are no function arguments,
	do not add trailing empty spaces to listing.

2007-09-19  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mode): Added
	`tinydebian-bts-mail-ctrl-merge'.
	(tinydebian-bts-mail-ctrl-merge): New.

2007-09-16  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-reportbug): Correct alias
	definition.

2007-09-06  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyirc.el
	(tinyirc-:pastebot-config-default-content): New.
	(tinyirc-pastebot-install-example-servers): Use
	`tinyirc-:pastebot-config-default-content'.
	(tinyirc-pastebot-send-region): Do not require match for
	service name.
	(tinyirc-:pastebot-service-list-time-stamp): New.
	(tinyirc-pastebot-service-list-set): Record
	`tinyirc-:pastebot-service-list-time-stamp'.
	(tinyirc-pastebot-service-file-name): New.
	(tinyirc-pastebot-service-list-from-file): Use
	`tinyirc-pastebot-service-file-name'.
	(tinyirc-pastebot-service-file-name-changed-p): New.
	(tinyirc-pastebot-service-list): Automatially notice
	changes to pastebot service file and update cache as needed.

	* tiny/tinydebian.el:
	(top level::Quick start): Announce `tinydebian-reportbug'.
	(bottom): Added alias command `tinydebian-reportbug'.

2007-09-04  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el: (at the end): removed local variables for
	security reasons.

2007-08-29 Wed  Jari Aalto  <jari.aalto@cante.net>
