@@ -932,7 +932,7 @@ If region is active, indent all lines backward."
 (defun tinytab-return-key-mode (&optional mode verb)
   "Toggle auto indent MODE / regular newline mode. VERB."
   (interactive)
-  (let* ((func  'tinytab-auto-indent)
+  (let* ((func 'tinytab-auto-indent)
          (now
           (or (and
                ;;  e.g. in fundamental-map this value is nil and
@@ -944,12 +944,12 @@ If region is active, indent all lines backward."
          to)
     ;;  If we redefine return key here, user will nver get out.
     ;;  C-m is exit-minibuffer.
-
     (if (string-match "minibuf" (buffer-name))
-        (error "TinyTab: Return key-mode not allowed in minibuffer."))
+        (error "TinyTab: tinytab-return-key-mode not allowed in minibuffer."))
     (setq verb (interactive-p))
     (cond
-     ((or (null mode) (not (integerp mode)))
+     ((or (null mode)
+          (not (integerp mode)))
       (setq to (if (eq now 'tinytab-auto-indent)
                    'newline
                  func)))
